<resources>
  <string name="app_name">펫다이어리</string>
  <string name="invite">초대코드 입력하기</string>
  <string name="start_kakao">카카오로 시작하기</string>
  <string name="start_email">이메일로 로그인하기</string>
  <string name="ic_login_dog">ic_login_dog</string>
  <string name="ic_login_cat">ic_login_cat</string>
  <string name="signUp">회원가입</string>
  <string name="id">아이디</string>
  <string name="pw">비밀번호</string>
  <string name="login">로그인</string>
  <string name="inputEmail">이메일 입력</string>
  <string name="btn_delete">btn_delete</string>
  <string name="next_page">다음 페이지</string>
  <string name="email_error">*이메일 형식이 올바르지 않습니다.</string>
  <string name="pw_error">*비밀번호는 영문,숫자 포함하여 8자 이내로 입력해주세요.</string>
  <string name="pass_pw_chk">*비밀번호가 일치합니다.</string>
  <string name="fail_pw_chk">*비밀번호가 일치하지 않습니다.</string>
  <string name="name">이름</string>
  <string name="ic_camera">ic_camera</string>
  <string name="select_pet">select pet</string>
  <string name="girl">여아</string>
  <string name="boy">남아</string>
  <string name="ic_calendar">ic_calendar</string>
  <string name="ic_check">ic_check</string>
  <string name="cancel">취소</string>
  <string name="confirm">확인</string>
  <string name="mode_simple">간단모드</string>
  <string name="mode_detail">섬세모드</string>
  <string name="ic_completed_bg">ic_completed_bg</string>
  <string name="home_community">커뮤니티</string>
  <string name="home_walk">강아지산책</string>
  <string name="home_calendar">캘린더</string>
  <string name="home_alert">알림</string>
  <string name="home_myPage">마이페이지</string>
  <string name="float_write">글쓰기</string>
  <string name="ic_paw">ic_paw</string>
  <string name="community_tab_share">정보공유</string>
  <string name="community_tab_photo">자랑하기</string>
  <string name="community_share_image">정보 공유 아이템 이미지</string>
  <string name="ic_watched">ic_watched</string>
  <string name="ic_liked">ic_liked</string>
  <string name="loading">loading…</string>
  <string name="community_detail_age">나이</string>
  <string name="community_detail_weight">몸무게</string>
  <string name="community_detail_breed">품종</string>
  <string name="input_title_hint">제목을 입력하세요</string>
  <string name="input_content_hint">내용을 입력하세요</string>
  <string name="community_post">꿀팁 입력 완료</string>
  <string name="tag">태그</string>
  <string name="post_image_btn">사진등록</string>
  <string name="user_profile">유저프로필</string>
  <string name="community_photo">community_photo</string>
  <string name="pet_image">pet_image</string>
  <string name="btn_arrow">btn_arrow</string>
  <string name="monday">Mon</string>
  <string name="tuesday">Tue</string>
  <string name="wednesday">Wed</string>
  <string name="thursday">Thu</string>
  <string name="friday">Fri</string>
  <string name="saturday">Sat</string>
  <string name="sunday">Sun</string>
  <string name="calender_record_item">calender record item</string>
  <string name="add_record_text">추가</string>
  <string name="feed">사료</string>
  <string name="snack">간식</string>
  <string name="water">물</string>
  <string name="water_changed">물갈이</string>
  <string name="poo">대변</string>
  <string name="pee">소변</string>
  <string name="pill">건강</string>
  <string name="beauty">미용</string>
</resources>