<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/sliderCalendarWrap"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="bottom"
  app:umanoOverlay="true"
  app:umanoPanelHeight="78sp"
  app:umanoScrollableView="@id/recyclerBreedList"
  app:umanoShadowHeight="2sp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="48sp"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="23sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <ImageView
        android:id="@+id/petImage"
        android:layout_width="41sp"
        android:layout_height="41sp"
        android:background="@color/gray_2"
        android:contentDescription="@string/pet_image" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15sp"
        android:gravity="center">

        <ImageButton
          android:id="@+id/prevMonth"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@null"
          android:contentDescription="@string/btn_arrow"
          android:src="@drawable/ic_arrow_left_24" />

        <TextView
          android:layout_marginTop="-1.5sp"
          android:id="@+id/currentMonth"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/pretendard_bold"
          android:letterSpacing="-0.08"
          android:textColor="@color/gray_9"
          android:textSize="18sp"
          tools:text="2022년 8월" />

        <ImageButton
          android:id="@+id/nextMonth"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@null"
          android:contentDescription="@string/btn_arrow"
          android:src="@drawable/ic_arrow_right_24" />
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginBottom="31sp"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/monday"
          android:textColor="@color/gray_9"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/tuesday"
          android:textColor="@color/gray_9"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/wednesday"
          android:textColor="@color/gray_9"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/thursday"
          android:textColor="@color/gray_9"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/friday"
          android:textColor="@color/gray_9"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/saturday"
          android:textColor="@color/sat"
          android:textSize="12sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/pretendard_bold"
          android:gravity="center"
          android:letterSpacing="-0.08"
          android:text="@string/sunday"
          android:textColor="@color/sun"
          android:textSize="12sp" />
      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calenderRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>

    <View
      android:background="@color/gray_2"
      android:layout_width="match_parent"
      android:layout_height="78sp"
      android:layout_gravity="bottom"/>
  </LinearLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  </androidx.constraintlayout.widget.ConstraintLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>