<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:paddingStart="24sp"
    android:paddingEnd="24sp">

    <EditText
      android:imeOptions="actionDone"
      android:id="@+id/sharePostTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="11sp"
      android:autofillHints="no"
      android:background="@color/white"
      android:fontFamily="@font/pretendard_bold"
      android:hint="@string/input_title_hint"
      android:inputType="text"
      android:letterSpacing="-0.035"
      android:textColor="@color/gray_9"
      android:textColorHint="@color/hint"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
      android:id="@+id/shareDetailSummary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/sharePostTitle">

      <include
        android:id="@+id/shareIncludePetInfo"
        layout="@layout/include_community_pet_info" />
    </LinearLayout>

    <EditText
      android:imeOptions="actionDone"
      android:id="@+id/sharePostContent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10sp"
      android:autofillHints="no"
      android:background="@color/white"
      android:fontFamily="@font/pretendard_regular"
      android:hint="@string/input_content_hint"
      android:inputType="text"
      android:letterSpacing="-0.024"
      android:maxHeight="269sp"
      android:padding="20sp"
      android:textColor="@color/gray_9"
      android:textColorHint="@color/content_hint"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/shareDetailSummary" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="25sp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="UseCompoundDrawables">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/pretendard_bold"
        android:letterSpacing="-0.041"
        android:text="@string/post_image_btn"
        android:textColor="@color/gray_9"
        android:textSize="16sp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageButton
          android:id="@+id/sharePostImageBtn"
          android:layout_width="90sp"
          android:layout_height="90sp"
          android:contentDescription="@string/post_image_btn"
          android:src="@drawable/ic_post_image" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/sharePostImageList"
          android:layout_width="match_parent"
          android:layout_height="90sp"
          android:layout_marginStart="2sp"
          android:orientation="horizontal"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
      </LinearLayout>
    </LinearLayout>

    <!--    <LinearLayout-->
    <!--      android:layout_width="match_parent"-->
    <!--      app:layout_constraintStart_toStartOf="parent"-->
    <!--      app:layout_constraintEnd_toEndOf="parent"-->
    <!--      android:layout_marginBottom="25sp"-->
    <!--      app:layout_constraintBottom_toBottomOf="parent"-->
    <!--      android:orientation="vertical"-->
    <!--      android:layout_height="wrap_content">-->
    <!--      <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/tag"/>-->
    <!--    </LinearLayout>-->
  </androidx.constraintlayout.widget.ConstraintLayout>

  <LinearLayout
    android:id="@+id/btnConfirm"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:layout_gravity="bottom"
    android:background="@color/main"
    android:gravity="center">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/pretendard_bold"
      android:text="@string/community_post"
      android:textColor="@color/white"
      android:textSize="18sp" />

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:contentDescription="@string/community_post"
      android:src="@drawable/ic_paw" />
  </LinearLayout>

</LinearLayout>