<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingStart="19dp"
  android:paddingTop="74dp"
  android:paddingEnd="19dp"
  android:paddingBottom="45dp"
  tools:context=".activities.LoginActivity">

  <LinearLayout
    android:id="@+id/loginTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/loginContent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:lineSpacingExtra="3dp"
      android:text="우리 반려동물을 위한\n기록습관"
      android:textColor="@color/gray_8"
      android:textSize="28sp"
      android:textStyle="bold"
      tools:ignore="HardcodedText,SpUsage" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray_8"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="에"
        android:textColor="@color/gray_8"
        android:textSize="28sp"
        tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="오신것을 환영해요 🐶 🐱"
      android:textColor="@color/gray_8"
      android:textSize="28sp"
      tools:ignore="HardcodedText,SpUsage" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/loginContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/loginUtil"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/loginTitle">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/btn_kakao"
      android:paddingStart="37dp"
      android:paddingTop="17dp"
      android:paddingEnd="37dp"
      android:paddingBottom="17dp">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_kakao"
        android:src="@drawable/ic_login_kakao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/start_kakao"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/kakao_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>

  <Button
    android:id="@+id/loginUtil"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_radius"
    android:paddingTop="17dp"
    android:paddingBottom="17dp"
    android:text="@string/invite"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/loginContent" />

</androidx.constraintlayout.widget.ConstraintLayout>